--- a/.github/workflows/docker-build-base.yaml
+++ b/.github/workflows/docker-build-base.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: kumarrobotics/autonomy-base:latest
+          tags: kumarrobotics/autonomy:base
           file: ./base/Dockerfile
       -
         name: Image digest
