--- a/.github/workflows/docker-build-base.yaml
+++ b/.github/workflows/docker-build-base.yaml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   push:
-    branches: master
+    branches: [master, gh_actions]
 
 jobs:
   main:
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       -
         name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -32,3 +32,11 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+      -
+        name: Repository Dispatch - Triggers subsequent builds
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          repository: KumarRobotics/autonomy_stack
+          event-type: base-build-done
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
