Dockerfile modifications for estimation

--- a/estimation/Dockerfile
+++ b/estimation/Dockerfile
@@ -3,14 +3,18 @@ FROM kumarrobotics/autonomy:base
 RUN apt update \
     && apt install -y \
     ros-melodic-random-numbers \
-    libsuitesparse-dev 
+    libsuitesparse-dev
 
-RUN mkdir -p /root/estimation_ws/src 
+RUN mkdir -p /root/estimation_ws/src
 WORKDIR /root/estimation_ws
 
-COPY pkgs src/pkgs
+COPY estimation/external-repos.yaml src/
+COPY estimation/pkgs src/pkgs
 RUN catkin init && catkin config --extend /opt/ros/melodic \
     && catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo
+RUN vcs import --input src/external-repos.yaml src/ \
+    && catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo 
 
-COPY docker/entrypoint.sh /entrypoint.sh
+
+COPY estimation/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
