--- a/.github/workflows/docker-build-estimation.yaml
+++ b/.github/workflows/docker-build-estimation.yaml
@@ -1,8 +1,11 @@
 name: docker-build-estimation
 
 on:
-  repository_dispatch:
-    types: [base-build-done]
+  workflow_run:
+    workflows: ["docker-build-base"]
+    branches: [master gh_actions]
+    types:
+      - completed
 
 jobs:
   main:
