--- a/estimation/Dockerfile
+++ b/estimation/Dockerfile
@@ -10,8 +10,7 @@ WORKDIR /root/estimation_ws
 
 COPY estimation/external-repos.yaml src/
 COPY estimation/pkgs src/pkgs
-RUN catkin init && catkin config --extend /opt/ros/melodic \
-    && catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo
+RUN catkin init && catkin config --extend /opt/ros/melodic
 RUN vcs import --input src/external-repos.yaml src/ \
     && catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo 
 
