--- a/estimation/external-repos.yaml
+++ b/estimation/external-repos.yaml
@@ -4,7 +4,7 @@ repositories:
     url: https://github.com/KumarRobotics/msckf_vio
     version: e3a39a95b57da376924aa22b46637b60f68f504c
 
-  kr_math:
+  kr_utils:
     type: git
     url: https://github.com/KumarRobotics/kr_utils
     version: 4a0117ee0d926eed0cd2aa0a412be35fe909a2db
