--- a/.github/workflows/cpplint-reviewdog.yaml
+++ b/.github/workflows/cpplint-reviewdog.yaml
@@ -9,7 +9,7 @@ jobs:
     - uses: reviewdog/action-cpplint@master
       with:
         github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
-        reporter: github-pr-review
+        reporter: github-pr-check
         # flags: --linelength=50 # Optional
         # filter: "-readability/braces\
         #   ,-whitespace/braces\
