--- a/.github/workflows/cpplint-reviewdog.yaml
+++ b/.github/workflows/cpplint-reviewdog.yaml
@@ -11,9 +11,9 @@ jobs:
         github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
         reporter: github-pr-check
         # flags: --linelength=50 # Optional
-        # filter: "-readability/braces\
+        filter: "-whitespace/comments"
+        #   ,-readability/braces\
         #   ,-whitespace/braces\
-        #   ,-whitespace/comments\
         #   ,-whitespace/indent\
         #   ,-whitespace/newline\
         #   ,-whitespace/operators\
