--- a/.github/workflows/docker-build-estimation.yaml
+++ b/.github/workflows/docker-build-estimation.yaml
@@ -38,6 +38,7 @@ jobs:
           push: true
           tags: kumarrobotics/autonomy:estimation
           file: ./estimation/Dockerfile
+          platforms: linux/amd64,linux/arm64
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
