Modified repo to build with Github actions.
We included external-repos, but we are not using it to build because quadrotor_control is private

--- a/control/Dockerfile
+++ b/control/Dockerfile
@@ -6,12 +6,16 @@ RUN apt update \
     ros-melodic-mavros-msgs \
     ros-melodic-mavros-extras
 
-RUN mkdir -p /root/control_ws/src 
+RUN mkdir -p /root/control_ws/src
 WORKDIR /root/control_ws
-COPY pkgs src/pkgs
-RUN catkin init && catkin config --extend /opt/ros/melodic \ 
-    && catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo 
+COPY control/pkgs src/pkgs
+RUN catkin init && catkin config --extend /opt/ros/melodic
 
-COPY docker/entrypoint.sh /entrypoint.sh
+# FIXME: We don't run vcs import as quadrotor_control is still a private repo. We have
+# to clone it before building with github actions
+# RUN vcs import --input src/external-repos.yaml src/
+RUN catkin build -j4 -DCMAKE_BUILD_TYPE=RelWithDebInfo
+
+COPY control/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
