Modified Github action to clone quadrotor_control repo

--- a/.github/workflows/docker-build-control.yaml
+++ b/.github/workflows/docker-build-control.yaml
@@ -31,6 +31,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Checkout quadrotor_control repo
+        uses: actions/checkout@v2
+        with:
+          repository: 'kumarrobotics/quadrotor_control'
+          token: '${{ secrets.AUTONOMY_STACK_QUADROTOR_CONTROL }}'
+          submodules: 'true'
+          path: 'control/pkgs/quadrotor_control'
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
