--- a/estimation/pkgs/estimation_launch/config/msckf_calib.yaml
+++ b/estimation/pkgs/estimation_launch/config/msckf_calib.yaml
@@ -1,7 +1,8 @@
 # The modifications of the output file from Kalibr:
 # 1. For each matrix (e.g. cam0/T_cam_imu), remove the brackets and minus sign for each line. Use one pair of brackets for each matrix.
 # 2. Add the T_imu_body at the end of the calibration file (usually set to identity).
-
+T_imu_body: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0,
+  0.0, 1.0]
 cam0:
   T_cam_imu:
     [0.0,-1.0, 0.0, 0.1,
