Build for control and estimation is less verbose on CI

--- a/estimation/Dockerfile
+++ b/estimation/Dockerfile
@@ -12,7 +12,7 @@ COPY estimation/external-repos.yaml src/
 COPY estimation/pkgs src/pkgs
 RUN catkin init && catkin config --extend /opt/ros/melodic
 RUN vcs import --input src/external-repos.yaml src/
-RUN catkin build -j4 -DCMAKE_BUILD_TYPE=Release
+RUN catkin build -j2 --no-status -DCMAKE_BUILD_TYPE=Release
 
 COPY estimation/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
