add client module and update control module

--- a/control/pkgs/control_launch/config/trackers_mp.yaml
+++ b/control/pkgs/control_launch/config/trackers_mp.yaml
@@ -5,5 +5,6 @@ trackers:
   - kr_trackers/NullTracker
   - action_trackers/TakeOffTracker
   - action_trackers/LandTracker
-  - action_trackers/ActionPathTracker
   - action_trackers/StoppingPolicy
+  - action_trackers/ActionTrajectoryTracker
+    #- action_trackers/ActionPathTracker
