--- a/.github/workflows/cpplint-reviewdog.yaml
+++ b/.github/workflows/cpplint-reviewdog.yaml
@@ -1,21 +1,21 @@
-name: cpplint-reviewdog
-on: [pull_request]
-
-jobs:
-  cpplint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - uses: reviewdog/action-cpplint@master
-      with:
-        github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
-        reporter: github-pr-check
-        # flags: --linelength=50 # Optional
-        filter: "-whitespace/comments"
-        #   ,-readability/braces\
-        #   ,-whitespace/braces\
-        #   ,-whitespace/indent\
-        #   ,-whitespace/newline\
-        #   ,-whitespace/operators\
-        #   ,-whitespace/parens\
-        #   " # Optional
+# name: cpplint-reviewdog
+# on: [pull_request]
+# 
+# jobs:
+#   cpplint:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@master
+#     - uses: reviewdog/action-cpplint@master
+#       with:
+#         github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
+#         reporter: github-pr-check
+#         # flags: --linelength=50 # Optional
+#         filter: "-whitespace/comments"
+#         #   ,-readability/braces\
+#         #   ,-whitespace/braces\
+#         #   ,-whitespace/indent\
+#         #   ,-whitespace/newline\
+#         #   ,-whitespace/operators\
+#         #   ,-whitespace/parens\
+#         #   " # Optional
