remove traj_opt_msgs, move msgs into planning_ros_msgs pkg, correct all references of msgs

--- a/state_machine/pkgs/action_trackers/CMakeLists.txt
+++ b/state_machine/pkgs/action_trackers/CMakeLists.txt
@@ -15,7 +15,6 @@ find_package(
              planning_ros_utils
              planning_ros_msgs
              decomp_ros_utils
-             traj_opt_msgs
              traj_opt_pro
              traj_opt_basic
              traj_opt_ros
@@ -34,11 +33,10 @@ add_action_files(
   ShortRange.action
   GoalDistance.action
   RunPath.action)
-generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs traj_opt_msgs
-                  kr_mav_msgs kr_tracker_msgs)
+generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs kr_mav_msgs kr_tracker_msgs)
 
 catkin_package(CATKIN_DEPENDS kr_mav_msgs actionlib_msgs planning_ros_msgs
-               traj_opt_msgs kr_tracker_msgs)
+               kr_tracker_msgs)
 
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE ${catkin_INCLUDE_DIRS})
