--- a/state_machine/pkgs/fla_state_machine/package.xml
+++ b/state_machine/pkgs/fla_state_machine/package.xml
@@ -15,11 +15,11 @@
   <depend>action_trackers</depend>
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
-  <depend>traj_opt_msgs</depend>
   <depend>kr_mav_msgs</depend>
   <depend>traj_opt_basic</depend>
   <depend>traj_opt_ros</depend>
   <depend>planning_ros_utils</depend>
+  <depend>planning_ros_msgs</depend>
   <depend>geometry_msgs</depend>
 
   
