--- a/map_plan/pkgs/map_plan_launch/config/mapper.yaml
+++ b/map_plan/pkgs/map_plan_launch/config/mapper.yaml
@@ -8,26 +8,25 @@ global:
   center_x: 0.0
   center_y: 0.0
   center_z: 3.0
-  range_x: 500.0
-  range_y: 500.0
+  range_x: 1000.0
+  range_y: 1000.0
   range_z: 6.0
-  resolution: 2.0
-  num_point_cloud_skip: 5 # integer
+  resolution: 3.0
+  num_point_cloud_skip: 1 # integer
   max_raycast_range: 100.0
   consider_robot_dim: false 
 
-local:
+local: # local map range z and center_z will be the same as storage map
   range_x: 60.0
   range_y: 60.0
-  range_z: 6.0
-  resolution: 0.5
+  resolution: 0.25
   max_raycast_range: 30.0
 
-storage:
+storage: # storage map max_raycat_range will be the same as local map
   center_x: 0.0
   center_y: 0.0
-  center_z: 5.0
-  range_x: 500.0
-  range_y: 500.0
-  range_z: 8.0
+  center_z: 3.0
+  range_x: 1000.0
+  range_y: 1000.0
+  range_z: 6.0
 
