Reviewdog does not check for whitespace/indent. It gives errors with QT.

--- a/.github/workflows/cpplint-reviewdog.yaml
+++ b/.github/workflows/cpplint-reviewdog.yaml
@@ -11,11 +11,9 @@ jobs:
         github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
         reporter: github-pr-check
         # flags: --linelength=50 # Optional
-        filter: "-whitespace/comments"
+        filter: "-whitespace/comments,-whitespace/indent"
         #   ,-readability/braces\
         #   ,-whitespace/braces\
-        #   ,-whitespace/indent\
         #   ,-whitespace/newline\
         #   ,-whitespace/operators\
         #   ,-whitespace/parens\
-        #   " # Optional
