Fix map_plan docker build on CI. Dockerfile now does vcs import.

--- a/.github/workflows/docker-build-map-plan.yaml
+++ b/.github/workflows/docker-build-map-plan.yaml
@@ -17,7 +17,7 @@ on:
   push:
     paths:
     - 'map_plan/**'
-    branches: [master, add_map_plan, add_map_plan_action]
+    branches: [master, rearrange_traj_msgs]
 
 jobs:
   main:
