--- a/map_plan/external-repos.yaml
+++ b/map_plan/external-repos.yaml
@@ -7,3 +7,7 @@ repositories:
     type: git
     url: https://github.com/KumarRobotics/motion_primitive_library
     version: catkin
+  DecompROS:
+    type: git
+    url: https://github.com/KumarRobotics/DecompROS
+    version: catkin
