--- a/state_machine/Dockerfile
+++ b/state_machine/Dockerfile
@@ -2,10 +2,10 @@ FROM kumarrobotics/autonomy:map_plan
 
 RUN mkdir -p /root/state_machine_ws/src 
 WORKDIR /root/state_machine_ws
-COPY pkgs src/pkgs
-RUN catkin init && catkin config --extend /root/map_plan_ws/devel \
-    && catkin build -j8 -DCMAKE_BUILD_TYPE=RelWithDebInfo 
+COPY state_machine/pkgs src/pkgs
+RUN catkin init && catkin config --extend /root/map_plan_ws/devel
+RUN catkin build -j2 --no-status -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
-COPY docker/entrypoint.sh /entrypoint.sh
+COPY state_machine/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
