Add dispatch and schedule for all docker builds

--- a/.github/workflows/docker-build-base.yaml
+++ b/.github/workflows/docker-build-base.yaml
@@ -6,6 +6,9 @@ on:
     paths:
     - 'base/**'
     branches: [master]
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'
 
 jobs:
   main:
