--- a/.github/workflows/docker-build-control.yaml
+++ b/.github/workflows/docker-build-control.yaml
@@ -8,6 +8,9 @@ on:
     branches: [master]
     types:
       - completed
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'
   push:
     paths:
     - 'control/**'
