--- a/.github/workflows/docker-build-calibration.yaml
+++ b/.github/workflows/docker-build-calibration.yaml
@@ -17,8 +17,7 @@ on:
     - 'calibration/**'
     branches: [master]
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * 0'
+  # DO NOT add a schedule. This build will be triggered by base schedule.
 
 jobs:
   main:
