Modified client Dockerfile for automated build

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,10 @@
 FROM kumarrobotics/autonomy:map_plan
 
-RUN mkdir -p /root/client_ws/src 
+RUN mkdir -p /root/client_ws/src
 WORKDIR /root/client_ws
 COPY pkgs src/pkgs
-RUN catkin init && catkin config --extend /root/map_plan_ws/devel \
-    && catkin build -j8 -DCMAKE_BUILD_TYPE=RelWithDebInfo 
+RUN catkin init && catkin config --extend /root/map_plan_ws/devel
+RUN catkin build -j2 --no-status -DCMAKE_BUILD_TYPE=Release
 
-COPY docker/entrypoint.sh /entrypoint.sh
+COPY client/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
-
