Test build in client-ci branch

--- a/.github/workflows/docker-build-client.yaml
+++ b/.github/workflows/docker-build-client.yaml
@@ -12,7 +12,7 @@ on:
   push:
     paths:
     - 'client/**'
-    branches: [master]
+    branches: [master, client_ci]
   # DO NOT add a schedule. This build will be triggered by base schedule.
 
 jobs:
