--- a/.github/workflows/docker-build-map-plan.yaml
+++ b/.github/workflows/docker-build-map-plan.yaml
@@ -44,7 +44,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: kumarrobotics/autonomy:map-plan
+          tags: kumarrobotics/autonomy:map_plan
           file: ./map_plan/Dockerfile
           platforms: linux/amd64,linux/arm64
       -
