--- a/.github/workflows/docker-build-state-machine.yaml
+++ b/.github/workflows/docker-build-state-machine.yaml
@@ -48,7 +48,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: kumarrobotics/autonomy:state-machine
+          tags: kumarrobotics/autonomy:state_machine
           file: ./state_machine/Dockerfile
           platforms: linux/amd64,linux/arm64
       -
