--- a/control/pkgs/control_launch/config/tracker_params_mp.yaml
+++ b/control/pkgs/control_launch/config/tracker_params_mp.yaml
@@ -36,8 +36,8 @@ trajectory_planner:
   max_j: 5.0 # default 1.0
   max_u: 5.0 # default 1.0
   tol_pos: 3.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
-  tol_vel: -1.0 # tolerance of acceleration for goal region
-  tol_acc: -1.0 # tolerance of velocity for goal region
+  global_goal_tol_vel: 1.0 # tolerance of acceleration for goal region
+  global_goal_tol_acc: -1 # tolerance of velocity for goal region
   dt: 1.0 # default 1
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
