Make state-machine build dependent of map-plan. Only build docker-build-client on master changes.

--- a/.github/workflows/docker-build-client.yaml
+++ b/.github/workflows/docker-build-client.yaml
@@ -12,7 +12,7 @@ on:
   push:
     paths:
     - 'client/**'
-    branches: [master, client_ci]
+    branches: [master]
   # DO NOT add a schedule. This build will be triggered by base schedule.
 
 jobs:
