remove primitive_to_traj_opt

--- a/map_plan/pkgs/action_planner/CMakeLists.txt
+++ b/map_plan/pkgs/action_planner/CMakeLists.txt
@@ -20,7 +20,6 @@ find_package(
              mav_high_level_msgs
              traj_opt_ros
              dynamic_reconfigure
-             primitive_to_traj_opt
              motion_primitive_library)
 
 find_package(Eigen3 REQUIRED)
@@ -34,15 +33,15 @@ catkin_package(CATKIN_DEPENDS dynamic_reconfigure planning_ros_msgs
                actionlib_msgs)
 
 add_executable(global_plan_server src/global_plan_server.cpp)
-target_include_directories(global_plan_server PUBLIC include ${catkin_INCLUDE_DIRS})
+target_include_directories(global_plan_server PUBLIC include
+                                                     ${catkin_INCLUDE_DIRS})
 target_link_libraries(global_plan_server PUBLIC ${catkin_LIBRARIES})
 add_dependencies(global_plan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
 add_executable(local_plan_server src/local_plan_server.cpp)
-target_include_directories(local_plan_server PUBLIC include ${catkin_INCLUDE_DIRS})
+target_include_directories(local_plan_server PUBLIC include
+                                                    ${catkin_INCLUDE_DIRS})
 target_link_libraries(local_plan_server PUBLIC ${catkin_LIBRARIES})
 add_dependencies(local_plan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
-                 
-                 
