--- a/.github/workflows/cpplint-reviewdog.yaml
+++ b/.github/workflows/cpplint-reviewdog.yaml
@@ -11,7 +11,7 @@ jobs:
         github_token: ${{ secrets.AUTONOMY_STACK_TOKEN_REVIEWDOG }}
         reporter: github-pr-check
         # flags: --linelength=50 # Optional
-        filter: "-whitespace/comments,-whitespace/indent,-build/include_order,-whitespace/newline"
+        filter: "-whitespace/comments,-whitespace/indent,-build/include_order,-whitespace/ending_newline"
         #   ,-readability/braces\
         #   ,-whitespace/braces\
         #   ,-whitespace/newline\
