remove poisonous catkin_simple from map_plan stack, some other systems still depend on it

--- a/map_plan/pkgs/action_planner/CMakeLists.txt
+++ b/map_plan/pkgs/action_planner/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(
              pcl_ros
              mapper
              jps3d
+             nav_msgs
              planning_ros_utils
              planning_ros_msgs
              mav_high_level_msgs
@@ -26,11 +27,11 @@ find_package(Eigen3 REQUIRED)
 
 add_action_files(DIRECTORY action FILES PlanPath.action PlanTwoPoint.action
                  PlanWaypoints.action)
-generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs)
+generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs nav_msgs)
 generate_dynamic_reconfigure_options(cfg/ActionPlanner.cfg)
 
 catkin_package(CATKIN_DEPENDS dynamic_reconfigure planning_ros_msgs
-               actionlib_msgs)
+               actionlib_msgs nav_msgs)
 
 add_executable(global_plan_server src/global_plan_server.cpp)
 target_include_directories(global_plan_server PUBLIC include
