--- a/map_plan/pkgs/action_planner/package.xml
+++ b/map_plan/pkgs/action_planner/package.xml
@@ -28,6 +28,7 @@
   <depend>planning_ros_msgs</depend>
   <depend>traj_opt_ros</depend>
   <depend>motion_primitive_library</depend>
+  <depend>nav_msgs</depend>
 
   <export>
   </export>
