--- a/map_plan/pkgs/planning_ros_msgs/CMakeLists.txt
+++ b/map_plan/pkgs/planning_ros_msgs/CMakeLists.txt
@@ -1,10 +1,25 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.10)
 project(planning_ros_msgs)
 
-find_package(catkin_simple REQUIRED)
+find_package(catkin REQUIRED COMPONENTS geometry_msgs message_generation)
 
-catkin_simple()
+add_message_files(
+  DIRECTORY
+  msg
+  FILES
+  LambdaSeg.msg
+  Log.msg
+  Path.msg
+  PathArray.msg
+  Polynomial.msg
+  Primitive.msg
+  PrimitiveArray.msg
+  Spline.msg
+  SplineTrajectory.msg
+  Trajectory.msg
+  TrajectoryCommand.msg
+  VoxelMap.msg)
 
-cs_install()
+generate_messages(DEPENDENCIES geometry_msgs)
 
-cs_export()
+catkin_package(CATKIN_DEPENDS geometry_msgs message_runtime)
