remove mav_high_level_msgs and move StateTransition to planning_ros_msgs

--- a/client/pkgs/kr_rviz_plugins/package.xml
+++ b/client/pkgs/kr_rviz_plugins/package.xml
@@ -13,7 +13,7 @@
 
   <depend>rviz</depend>
   <depend>rosbag</depend>
-  <depend>mav_high_level_msgs</depend>
+  <depend>planning_ros_msgs</depend>
 
   <export>
     <rosdoc config="${prefix}/rosdoc.yaml"/>
