--- a/map_plan/pkgs/planning_ros_msgs/package.xml
+++ b/map_plan/pkgs/planning_ros_msgs/package.xml
@@ -10,6 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
 
