--- a/map_plan/pkgs/action_planner/CMakeLists.txt
+++ b/map_plan/pkgs/action_planner/CMakeLists.txt
@@ -21,8 +21,6 @@ find_package(
              dynamic_reconfigure
              motion_primitive_library)
 
-find_package(Eigen3 REQUIRED)
-
 add_action_files(DIRECTORY action FILES PlanPath.action PlanTwoPoint.action
                  PlanWaypoints.action)
 generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs)
@@ -31,16 +29,16 @@ generate_dynamic_reconfigure_options(cfg/ActionPlanner.cfg)
 catkin_package(CATKIN_DEPENDS dynamic_reconfigure planning_ros_msgs
                actionlib_msgs)
 
+add_library(${PROJECT_NAME} src/data_conversions.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC src ${catkin_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
+
 add_executable(global_plan_server src/global_plan_server.cpp)
-target_include_directories(global_plan_server PUBLIC include
-                                                     ${catkin_INCLUDE_DIRS})
-target_link_libraries(global_plan_server PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(global_plan_server PUBLIC ${PROJECT_NAME})
 add_dependencies(global_plan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
 add_executable(local_plan_server src/local_plan_server.cpp)
-target_include_directories(local_plan_server PUBLIC include
-                                                    ${catkin_INCLUDE_DIRS})
-target_link_libraries(local_plan_server PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(local_plan_server PUBLIC ${PROJECT_NAME})
 add_dependencies(local_plan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
