--- a/map_plan/pkgs/mapper/CMakeLists.txt
+++ b/map_plan/pkgs/mapper/CMakeLists.txt
@@ -11,19 +11,17 @@ find_package(
              planning_ros_utils
              depth_image_proc
              eigen_conversions
-             tf_conversions
-             jps3d)
+             tf_conversions)
 
 catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME})
 
-add_library(${PROJECT_NAME} src/tf_listener.cpp src/data_conversions.cpp)
+add_library(${PROJECT_NAME} src/tf_listener.cpp src/voxel_mapper.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${catkin_INCLUDE_DIRS}
                                                   include)
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 
-add_executable(cloud_to_map src/cloud_to_map.cpp src/voxel_mapper.cpp)
+add_executable(cloud_to_map src/cloud_to_map.cpp)
 target_link_libraries(cloud_to_map PUBLIC ${PROJECT_NAME})
 
-add_executable(local_global_mapper src/local_global_mapper.cpp
-                                   src/voxel_mapper.cpp)
+add_executable(local_global_mapper src/local_global_mapper.cpp)
 target_link_libraries(local_global_mapper PUBLIC ${PROJECT_NAME})
