--- a/state_machine/pkgs/action_trackers/CMakeLists.txt
+++ b/state_machine/pkgs/action_trackers/CMakeLists.txt
@@ -35,7 +35,7 @@ generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs kr_mav_msgs
 catkin_package(CATKIN_DEPENDS kr_mav_msgs actionlib_msgs planning_ros_msgs
                kr_tracker_msgs)
 
-add_library(${PROJECT_NAME} projector.cpp)
+add_library(${PROJECT_NAME} src/projector.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC src ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} Eigen3::Eigen)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
