--- a/state_machine/pkgs/action_trackers/CMakeLists.txt
+++ b/state_machine/pkgs/action_trackers/CMakeLists.txt
@@ -14,7 +14,6 @@ find_package(
              kr_trackers_manager
              planning_ros_utils
              planning_ros_msgs
-             decomp_ros_utils
              traj_opt_ros
              motion_primitive_library)
 
@@ -36,10 +35,9 @@ generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs kr_mav_msgs
 catkin_package(CATKIN_DEPENDS kr_mav_msgs actionlib_msgs planning_ros_msgs
                kr_tracker_msgs)
 
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE ${catkin_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} INTERFACE ${catkin_LIBRARIES}
-                                                Eigen3::Eigen)
+add_library(${PROJECT_NAME} src/projector.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC src ${catkin_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} Eigen3::Eigen)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
