--- a/control/pkgs/control_launch/config/tracker_params_mp.yaml
+++ b/control/pkgs/control_launch/config/tracker_params_mp.yaml
@@ -34,7 +34,12 @@ trajectory_planner:
   max_v: 30.0 # default 2.0
   max_a: 10.0 # default 1.0
   max_j: 5.0 # default 1.0
-  max_u: 5.0 # default 1.0
+  max_u: 2.0 # default 1.0
+  use_3d: false # default false
+  max_v_z: 2.0 # default 2.0
+  max_a_z: 1.0 # default 1.0
+  max_j_z: 1.0 # default 1.0
+  max_u_z: 1.0 # default 1.0
   tol_pos: 3.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
   global_goal_tol_vel: 1.0 # tolerance of acceleration for goal region
   global_goal_tol_acc: 1.0 # tolerance of velocity for goal region
