move more functions to cpp file and various cleanup

--- a/state_machine/fla_state_machine/CMakeLists.txt
+++ b/state_machine/fla_state_machine/CMakeLists.txt
@@ -8,33 +8,29 @@ find_package(
   COMPONENTS kr_mav_msgs
              planning_ros_utils
              traj_opt_ros
-             planning_ros_msgs 
+             planning_ros_msgs
              actionlib
              actionlib_msgs
              action_planner
              action_trackers
-             geometry_msgs
-             )
-            
-find_package(Boost REQUIRED)
-find_package(Eigen3 REQUIRED)
+             geometry_msgs)
 
 add_action_files(DIRECTORY action FILES Replan.action)
 generate_messages(DEPENDENCIES actionlib_msgs geometry_msgs)
 
-catkin_package(
-   CATKIN_DEPENDS actionlib_msgs geometry_msgs)
+catkin_package(CATKIN_DEPENDS actionlib_msgs geometry_msgs)
+
+add_library(${PROJECT_NAME} src/traj_opt_utils.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC include
+                                                  ${catkin_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 
 add_executable(local_global_replan_server src/local_global_replan_server.cpp)
-target_include_directories(local_global_replan_server PUBLIC include ${EIGEN3_INCLUDE_DIR} ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
-target_link_libraries(local_global_replan_server PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(local_global_replan_server PUBLIC ${PROJECT_NAME})
 add_dependencies(local_global_replan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
-                 
-                 
+
 add_executable(path_replanner src/path_replanner.cpp)
-target_include_directories(path_replanner PUBLIC include ${EIGEN3_INCLUDE_DIR} ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
-target_link_libraries(path_replanner PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(path_replanner PUBLIC ${PROJECT_NAME})
 add_dependencies(path_replanner ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
-
