--- a/map_plan/mpl/CMakeLists.txt
+++ b/map_plan/mpl/CMakeLists.txt
@@ -10,18 +10,18 @@ catkin_package(
   INCLUDE_DIRS
   include
   LIBRARIES
-  poly_solver
-  map_planner
+  mpl_poly_solver
+  mpl_map_planner
   DEPENDS
   EIGEN3)
 
-add_library(poly_solver src/mpl_traj_solver/poly_solver.cpp
-                        src/mpl_traj_solver/poly_traj.cpp)
-target_include_directories(poly_solver PUBLIC include)
-target_link_libraries(poly_solver PUBLIC Eigen3::Eigen)
+add_library(mpl_poly_solver src/mpl_traj_solver/poly_solver.cpp
+                            src/mpl_traj_solver/poly_traj.cpp)
+target_include_directories(mpl_poly_solver PUBLIC include)
+target_link_libraries(mpl_poly_solver PUBLIC Eigen3::Eigen)
 
-add_library(map_planner src/mpl_planner/map_planner.cpp)
-target_include_directories(map_planner PUBLIC include)
-target_link_libraries(map_planner PUBLIC Eigen3::Eigen)
+add_library(mpl_map_planner src/mpl_planner/map_planner.cpp)
+target_include_directories(mpl_map_planner PUBLIC include)
+target_link_libraries(mpl_map_planner PUBLIC Eigen3::Eigen)
 
 # add_subdirectory(test)
