--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -31,18 +31,18 @@ trajectory_planner:
   use_yaw: false # default false
   yaw_speed: 0.2 # default 0.2
   use_lambda: true # pose error checking
-  max_v: 30.0 # default 2.0
-  max_a: 10.0 # default 1.0
+  max_v: 7.0 # default 2.0
+  max_a: 5.0 # default 1.0
   max_j: 5.0 # default 1.0
   max_u: 2.0 # default 1.0
-  use_3d: false # default false
+  use_3d: true # default false
   max_v_z: 2.0 # default 2.0
   max_a_z: 1.0 # default 1.0
   max_j_z: 1.0 # default 1.0
   max_u_z: 1.0 # default 1.0
   tol_pos: 3.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
-  global_goal_tol_vel: 1.0 # tolerance of acceleration for goal region
-  global_goal_tol_acc: 1.0 # tolerance of velocity for goal region
+  global_goal_tol_vel: 2.0 # tolerance of acceleration for goal region
+  global_goal_tol_acc: -1 # tolerance of velocity for goal region
   dt: 1.0 # default 1
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
