--- a/control/control_launch/config/tracker_params_mp.yaml
+++ b/control/control_launch/config/tracker_params_mp.yaml
@@ -31,12 +31,12 @@ trajectory_planner:
   use_yaw: false # default false
   yaw_speed: 0.2 # default 0.2
   use_lambda: true # pose error checking
-  max_v: 7.0 # default 2.0
-  max_a: 5.0 # default 1.0
-  max_j: 5.0 # default 1.0
-  max_u: 2.0 # default 1.0
-  use_3d: true # default false
-  max_v_z: 2.0 # default 2.0
+  max_v: 2.0 # default 2.0
+  max_a: 1.0 # default 1.0
+  max_j: 1.0 # default 1.0
+  max_u: 1.0 # default 1.0
+  use_3d: true # use 3d local planner
+  max_v_z: 1.0 # default 2.0
   max_a_z: 1.0 # default 1.0
   max_j_z: 1.0 # default 1.0
   max_u_z: 1.0 # default 1.0
@@ -46,6 +46,12 @@ trajectory_planner:
   dt: 1.0 # default 1
   ndt: 1.0 # default 1
   max_num: -1 # Maxmum number of expansion, -1 means no limitation
+
+stopping_policy:
+  # TODO(xu) verify whether this is actually working!
+  acc_xyz_des: 10.0 # 
+  jerk_xyz_des: 5.0 #
+  acc_yaw_des: 0.1 # rad
 
 local_global_server:
   crop_radius: 25 # crop length when cropping global path to get local goal, this should be less than local map's range
