remove redundant Coord template paramter, just use Waypoint<Dim> inside

--- a/map_plan/mpl/CMakeLists.txt
+++ b/map_plan/mpl/CMakeLists.txt
@@ -13,10 +13,13 @@ add_library(
   src/math.cpp
   src/lambda.cpp
   src/primitive.cpp
-  src/map_planner.cpp
   src/trajectory.cpp
   src/waypoint.cpp
   src/map_util.cpp
-  src/env_base.cpp)
+  src/env_base.cpp
+  src/env_map.cpp
+  src/map_planner.cpp
+  src/state_space.cpp
+  src/graph_search.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
