move most of the template definition to cpp file so only instantiate once

--- a/map_plan/mpl/CMakeLists.txt
+++ b/map_plan/mpl/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(
   src/env_base.cpp
   src/env_map.cpp
   src/map_planner.cpp
+  src/planner_base.cpp
   src/state_space.cpp
   src/graph_search.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
