use boost timer for timing instead of ros::Time

--- a/map_plan/mapper/CMakeLists.txt
+++ b/map_plan/mapper/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(
              depth_image_proc
              eigen_conversions
              tf_conversions)
+find_package(Boost REQUIRED COMPONENTS timer)
 
 catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME})
 
@@ -24,4 +25,4 @@ target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES})
 # target_link_libraries(cloud_to_map PUBLIC ${PROJECT_NAME})
 
 add_executable(local_global_mapper src/local_global_mapper.cpp)
-target_link_libraries(local_global_mapper PUBLIC ${PROJECT_NAME})
+target_link_libraries(local_global_mapper PUBLIC ${PROJECT_NAME} Boost::timer)
